--- a/DarzaRepublika/wwwroot/css/site.css
+++ b/DarzaRepublika/wwwroot/css/site.css
@@ -348,7 +348,7 @@ section {
 }
 .language-switcher {
     margin-left: 10px;
-    margin-top: 120px
+    margin-top: 120px;                                                                                                             0px
 }
 
 .flag-icon {
